add hungarian comments and minor refactoring

--- a/CounterMachine/CounterMachine.vcxproj
+++ b/CounterMachine/CounterMachine.vcxproj
@@ -120,7 +120,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
-      <WarningLevel>Level3</WarningLevel>
+      <WarningLevel>Level2</WarningLevel>
       <PrecompiledHeader>
       </PrecompiledHeader>
       <Optimization>MaxSpeed</Optimization>
@@ -163,7 +163,7 @@
     <ClInclude Include="Source\Execution\Computation.h" />
     <ClInclude Include="Source\Execution\Instruction.h" />
     <ClInclude Include="Source\Execution\State.h" />
-    <ClInclude Include="Source\Processing\ArgParser.h" />
+    <ClInclude Include="Source\Processing\InputParser.h" />
     <ClInclude Include="Source\Processing\ExecutionBuilder.h" />
     <ClInclude Include="Source\Processing\Lexer.h" />
     <ClInclude Include="Source\Processing\Parser.h" />
@@ -182,7 +182,7 @@
     <ClCompile Include="Source\Descriptors\Computation.cpp" />
     <ClCompile Include="Source\Execution\Computation.cpp" />
     <ClCompile Include="Source\Execution\State.cpp" />
-    <ClCompile Include="Source\Processing\ArgParser.cpp" />
+    <ClCompile Include="Source\Processing\InputParser.cpp" />
     <ClCompile Include="Source\Processing\ExecutionBuilder.cpp" />
     <ClCompile Include="Source\Processing\Lexer.cpp" />
     <ClCompile Include="Source\Processing\Parser.cpp" />
